<resources>
    <string name="app_name">Taneman</string>
    <string name="edit_text_search">Search user</string>
    <string name="emailHint">E-mail (example@mail.com)</string>
    <string name="passwordHint">Password</string>
    <string name="user_name">User name</string>
    <string name="RegexForNameUnicode">^[\\p{L} .\'-]+$</string>
    <string name="error_email">Invalid email (example@mail.com)</string>
    <string name="error_register_name">Only letters and a maximum of 50 characters are required.</string>
    <string name="error_user_name">Mandatory to contain letters and / or numbers, maximum 20 characters.</string>
    <string name="error_password">Mandatory to contain letters and numbers, between 6 and 20 characters.</string>
<!--    <string name="EmailPreLogin">EmailPreLogin</string>-->
    <string name="RegexOnlyNumberOrLetter">[a-zA-Z0-9]+</string>
    <string name="RegexOnlyNumberAndLetter">(?:\\d+[a-z]|[a-z]+\\d)[a-z\\d]*</string>
    <string name="imageview_backarrow">imageView_backArrow</string>
    <string name="create_new_password">CREATE YOUR NEW PASSWORD:</string>
    <string name="change_password">Change Password</string>
    <string name="passwordConfirm">Confirm your password</string>
    <string name="noMatchPassword">Passwords don\'t match</string>
    <string name="newPassword">New password</string>
    <string name="enterPassword">INFORM YOUR PASSWORD</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="forgotUsername">Forgot your username?</string>
    <string name="enter">enter</string>
    <string name="errorUserOrPassword">Invalid username or password!</string>
    <string name="registerOk">User successfully registered!</string>
    <string name="error_nullfield">Null or empty fields are not allowed</string>
    <string name="duplicate_email">E-mail already registered</string>
    <string name="duplicate_username">Username already registered</string>
    <string name="errorValidadePassword">Mandatory to contain letters and numbers, between 6 and 10 characters.</string>
    <string name="progressBar_fullPercentage">100</string>
    <string name="connectionErrorMessage">Connection error occurred</string>
    <string name="success_message_login">Password confirmed, login authorized!</string>
    <string name="success_message_change_pass">Password changed successfully!</string>
    <string name="service_or_connection_error_change_password">Failed to validate changing the password. Check the connection and try again.</string>
    <string name="service_or_connection_error_login">Failed to validate your password. Check the connection and try again.</string>
    <string name="success_message_email">A code has been sent to your email!</string>
    <string name="service_or_connection_error_token">Failed to send code to email. Check the connection and try again.</string>
    <string name="registered">REGISTERED</string>
    <string name="pending">PENDING</string>
    <string name="inexistent">INEXISTENT</string>
    <string name="service_or_connection_validate_email">Failed to validate your email. Check the connection and try again.</string>
    <string name="service_or_connection_error_register">Failed to register your registration. Check the connection and try again.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_search">Search</string>
    <string name="title_activity_home_drawer">HomeDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="text_fragment_a">Esta é a fragment A da Tab A!</string>
    <string name="text_fragment_b">Esta é a fragment B da Tab B!</string>
    <string name="first_page">1</string>
    <string name="title_activity_list_film">ListFilmActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites">Favoritos</string>
    <string name="hintSearch">Search plants</string>
    <string name="errorMessagePlantNotFound">No plants were found \ for your searcha</string>
    <string name="plantTitleItem">Plant Title</string>
    <string name="point">•</string>
    <string name="plantBannerDescription">plant banner</string>
    <string name="place_holder_banner_description">place holder banner</string>
    <string name="banner_navigation_view">banner navigation view</string>
    <string name="logout">Logout</string>
    <string name="favoriteListEmpty">Your list of bookmarked plants is empty. \n \nSlide down to update the list!</string>
    <string name="iconSwipeDescription">swipe down icon</string>
    <string name="result">Result for : </string>
    <string name="registerButton">Register</string>
    <string name="loginButton">Login</string>
    <string name="loginTitle">Login</string>
    <string name="registerTitle">Register</string>
    <string name="passwordReEnterHint">Re-enter Password</string>
    <string name="helloHome">Hello</string>
    <string name="greetingHome">Welcome</string>
    <string name="plantsTitle">Plants</string>
    <string name="categoriesTitle">Categories</string>
    <string name="changePasswordMenu">Change password</string>
    <string name="logoutMenu">Logout</string>
    <string name="noResultText">no result</string>
    <string name="scientificName">Scientific name</string>
    <string name="localName">Local name</string>
    <string name="taxonomy">Taxonomy</string>
    <string name="kingdom">kingdom</string>
    <string name="phylum">phylum</string>
    <string name="order">order</string>
    <string name="family">family</string>
    <string name="genus">genus</string>
    <string name="species">species</string>
    <string name="general_characteristic">General characteristic</string>
    <string name="category_name">Category Name</string>
    <string name="logoutMessage">You are not logged in, please login first</string>
    <string name="scanPermissionMessage">Permission already granted</string>
    <string name="scanPermissionMessageSucces">Permission Granted, Now you can access camera</string>
    <string name="scanPermissionDenied">Permission Denied, You cannot access and camera</string>
    <string name="scanPermissionAllowMessage">You need to allow access to both the permissions</string>
    <string name="loginSuccess">Login successful</string>
    <string name="change_language_label">Change language</string>
    <string name="category_list_title">All Category</string>
    <string name="plant_list_title">All Plant</string>
    <string name="description">Description</string>
    <string name="change_password_title">Change password</string>
    <string name="old_password_hint">Old password</string>
    <string name="new_passwod_hint">New password</string>
    <string name="new_password_hint_re">Re-enter new password</string>
    <string name="favorite_list_title">Favourite List</string>

</resources>
