<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Layout_Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView_backArrow"
            android:layout_width="@dimen/sizeBackArrow"
            android:layout_height="@dimen/sizeBackArrow"
            android:layout_marginTop="@dimen/marginLayout"
            android:layout_marginStart="@dimen/marginLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp"
            android:contentDescription="@string/imageview_backarrow" />


        <TextView
            android:id="@+id/textView_registerUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_header"
            android:fontFamily="@font/dosis_bold"
            android:text="@string/change_password_title"
            android:textAlignment="center"
            android:textColor="@color/colorEmailHeadHint"
            android:textSize="@dimen/textSizeHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/button_nextChagePass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/include"
            app:layout_constraintTop_toBottomOf="@+id/textView_registerUser">

            <com.ydh.botanic.ui.component.ErrorEditText
                android:id="@+id/errorEditText_enterOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marginLayout"
                android:layout_marginRight="@dimen/marginLayout"
                app:setHint="@string/old_password_hint"
                app:setInicialErrorVisibility="false"
                app:setInputType="textPassword"
                app:setMessageError="@string/error_password">

            </com.ydh.botanic.ui.component.ErrorEditText>

            <com.ydh.botanic.ui.component.ErrorEditText
                android:id="@+id/errorEditText_enterNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marginLayout"
                android:layout_marginTop="@dimen/marginDefault"
                android:layout_marginRight="@dimen/marginLayout"
                app:setHint="@string/new_passwod_hint"
                app:setInicialErrorVisibility="false"
                app:setInputType="textPassword"
                app:setMessageError="@string/error_password">

            </com.ydh.botanic.ui.component.ErrorEditText>

            <com.ydh.botanic.ui.component.ErrorEditText
                android:id="@+id/errorEditText_enterReNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marginLayout"
                android:layout_marginTop="@dimen/smallMargin"
                android:layout_marginRight="@dimen/marginLayout"
                app:setHint="@string/new_password_hint_re"
                app:setInicialErrorVisibility="false"
                app:setInputType="textPassword"
                app:setMessageError="@string/error_password">

            </com.ydh.botanic.ui.component.ErrorEditText>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/marginLayout"
            android:text="@string/forgotPassword"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            android:id="@+id/button_nextChagePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginLayout"
            android:layout_marginEnd="@dimen/marginLayout"
            android:layout_marginBottom="@dimen/marginOrPaddingDefaultLayout"
            android:background="@drawable/button_style"
            android:fontFamily="@font/dosis_bold"
            android:text="@string/change_password_title"
            android:textColor="@color/colorTextBottonEmailPreLogin"
            android:textSize="@dimen/textSizeDefault"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            tools:ignore="MissingConstraints" />

        <include
            android:id="@+id/include"
            layout="@layout/loading_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>