<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparent"
    android:backgroundTint="@color/colorTransparent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:fitsSystemWindows="true"

        android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:maxLines="3"

            app:expandedTitleMarginStart="16dp"
            app:expandedTitleGravity="bottom"


            app:contentScrim="@color/colorPrimary"


            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">



            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_banner_details"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                app:cardElevation="@dimen/bannerCardElevation">
                <ImageView
                    android:id="@+id/imageView_category_details"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/place_holder_banner_description"
                    android:scaleType="centerCrop"
                    android:src="@drawable/banner_placeholder_background" />

                <ProgressBar
                    android:id="@+id/category_progress_banner"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="@dimen/marginTwentyEight"
                    android:layout_height="@dimen/marginTwentyEight"
                    android:layout_gravity="center"
                    android:theme="@style/CircularProgress" />

                <ImageView
                    android:id="@+id/imageView_banner_details"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"

                    android:contentDescription="@string/plantBannerDescription"
                    android:scaleType="centerCrop" />


            </androidx.cardview.widget.CardView>



            <View
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_gravity="bottom"
                android:background="@drawable/detail_banner_background_bottom"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_gravity="top"
                android:background="@drawable/detail_banner_background_top"
                />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"



        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_marginStart="@dimen/bigMargin"
            android:layout_marginEnd="@dimen/bigMargin"
            android:orientation="vertical"

            app:layout_collapseMode="pin">

            <LinearLayout
                android:layout_marginTop="@dimen/activity_margin"

                android:id="@+id/linearLayout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/activity_margin"
                >


                <TextView
                    android:id="@+id/text_name_details"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/marginStartDetails"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/category_name"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />
            </LinearLayout>



            <LinearLayout
                android:id="@+id/linearLayout_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStartDetails"

                android:layout_below="@+id/linearLayout_name"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@color/colorBlack"
                    android:alpha="@dimen/alphaEffect"
                    android:gravity="clip_horizontal"


                    />
                <TextView
                    android:id="@+id/textView_overview_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="clip_horizontal"
                    android:text="@string/general_characteristic"
                    android:textColor="@color/colorBlack" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_plants_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStartDetails"

                android:layout_below="@+id/linearLayout_description"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="clip_horizontal"
                    android:alpha="@dimen/alphaEffect"
                    android:text="@string/plantsTitle"
                    android:textColor="@color/colorBlack" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:background="@color/white"
                android:id="@+id/rv_plant_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/linearLayout_plants_title"
                tools:listitem="@layout/item_plant_list_item" />



        </RelativeLayout>




    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
